--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,7 @@
   "builds": [
     {
       "src": "api/index.py",
-      "use": "@vercel/python",
-      "config": {
-        "excludeFiles": [
-          "app/**",
-          "components/**",
-          "node_modules/**",
-          "public/**",
-          ".next/**",
-          "build/**",
-          "out/**",
-          "*.js",
-          "*.json",
-          "*.ts",
-          "*.tsx",
-          "*.mjs"
-        ]
-      }
+      "use": "@vercel/python"
     },
     {
       "src": "package.json",
