--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "api/**/*.py": {
-      "runtime": "@vercel/python@3.1.3"
+      "runtime": "python3.11"
     }
   }
 }
+GOKRSOJIDO
